examples/test/testpolicy7398.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7398
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key24: value16
      key9: value37
      key41: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value36
          key43: value38
          key22: value45
      podSelector:
        matchLabels:
          key15: value29
